original/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#   labels:
#     app: istio-ingressgateway
#     install.operator.istio.io/owning-resource: unknown
#     istio: ingressgateway
#     istio.io/rev: default
#     operator.istio.io/component: IngressGateways
#     release: istio
#   name: istio-ingressgateway
#   namespace: istio-system
# spec:
#   $patch: replace
#   ports:
#   - name: status-port
#     port: 15022
#     protocol: TCP
#     targetPort: 15021
#   - name: http2
#     port: 81
#     protocol: TCP
#     targetPort: 8080
#   - name: https
#     port: 445
#     protocol: TCP
#     targetPort: 8443
#   - name: tcp
#     port: 31401
#     protocol: TCP
#     targetPort: 31400
#   - name: tls
#     port: 15445
#     protocol: TCP
#     targetPort: 15443
#   selector:
#     app: istio-ingressgateway
#     istio: ingressgateway
#   type: LoadBalancer
# ---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
