original/minio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /minio/
      route:
        - destination:
            host: minio-service.kubeflow.svc.cluster.local
            port:
              number: 9000
